<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2025 Arnaldo Alfredo.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contenedorActualizar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:maxWidth="312dp"
    android:padding="@dimen/activityHorizontalMargin"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!-- Title -->
    <TextView
        android:id="@+id/update_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/update_title"
        android:textAppearance="?attr/textAppearanceHeadlineSmall" />

    <!-- Description-->
    <TextView
        android:id="@+id/update_description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:maxWidth="360dp"
        android:text="@string/update_description"
        android:textAppearance="?attr/textAppearanceBodyMedium" />

    <!-- Update now button -->
    <Button
        android:id="@+id/update_now_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/contentSecondaryMargin"
        android:minWidth="200dp"
        android:text="@string/update_confirm" />

    <!-- Update later button -->
    <Button
        android:id="@+id/update_later_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activitySecondaryVerticalMargin"
        android:minWidth="200dp"
        android:text="@string/update_later"
        style="@style/Widget.Material3.Button.OutlinedButton"/>

</LinearLayout>