<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2025 Arnaldo Alfredo.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingHorizontal="@dimen/activityHorizontalMargin">

    <!-- Loading indicator -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/content_loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/playback_state_loading"
        android:indeterminate="true"
        android:visibility="invisible"
        app:trackCornerRadius="@dimen/borderRadiusLarge" />

    <!-- Error message -->
    <TextView
        android:id="@+id/content_loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:maxWidth="360dp"
        android:text="@string/txt_error_loading_content"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:visibility="invisible" />

    <!-- Retry button -->
    <Button
        android:id="@+id/content_loading_retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content_loading_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/retry"
        android:visibility="invisible"
        style="?attr/materialButtonStyle"/>

</RelativeLayout>